@@ -1,0 +1,28 @@
+#   Copyright (C) 2015 Jose E. Marchesi
+#   Copyright (C) 2015 Giuseppe Scrivano
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
+
+# Please email any bugs, comments, and/or additions to this file to:
+# cockroach-devel@nongnu.org
+
+load_lib ../lib/cockroach.exp
+
+roach_build_test_program test_a.c test_a {}
+
+roach_test "--plugin=translate:write(*,*,*),write(@1,@2,2) $test_a" "fo" \
+    "syscall rewritten to truncate output"
+roach_test "--plugin=translate:write(1,*,*),write(2,@2,@3) $test_a" "foo" \
+    "syscall rewritten to emit through the error output"
